# props

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .gitignore.orig  .gitmodules  .travis-build.sh  .travis.yml  CMakeLists.txt  README.md  generate_vs_project.bat  main.cpp  version.hpp.in
cmake/: Conan.cmake  Utils.cmake  clang-tidy.cmake  dependency.cmake  depends.cmake  propertysdk.cmake.in
example/: CMakeLists.txt  main.cpp
include/propertysdk/: property.hpp  property_config.hpp  serializable.hpp  serializable_holder.hpp  serializable_map_holder.hpp  serializable_scalar_holder.hpp  serializable_sequence_holder.hpp  serializable_serialize_holder.hpp  serialize_node.hpp  version.hpp
src/: CMakeLists.txt  property.cpp  serialize_node.cpp
src/include/property/: property.hpp  property_config.hpp  serializable.hpp  serializable_holder.hpp  serializable_map_holder.hpp  serializable_scalar_holder.hpp  serializable_sequence_holder.hpp  serializable_serialize_holder.hpp  serialize_node.hpp
travis/: install-linux.sh
